<?xml version="1.0" encoding="utf-8"?>
<com.expedia.bookings.widget.CarDriverWidget xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/driver_info_card_view"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    card_view:cardCornerRadius="4dp">

    <com.expedia.bookings.widget.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="18sp"
        android:id="@+id/driver_info_text"
        android:drawableLeft="@drawable/driver_large"
        android:gravity="center|left"
        android:drawablePadding="8dp"
        android:text="Enter driver details" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/driver_info_container"
        android:padding="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:textSize="16sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address_hint"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.expedia.bookings.widget.TelephoneSpinner
                android:id="@+id/phone_country_code_spinner"
                style="@style/Widget.Spinner.Phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/edit_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/phone_number_hint"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</com.expedia.bookings.widget.CarDriverWidget>