<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <include android:id="@+id/address_section" layout="@layout/section_address" />
    
    <include android:id="@+id/creditcard_section" layout="@layout/section_creditcard" />
    
</LinearLayout>