...
                    android:drawableRight="@drawable/material_dropdown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:bufferType="spannable"
                    android:hint="@string/expiration_date"
                    android:nextFocusForward="@+id/edit_address_postal_code"
                    android:textSize="18sp" />

                <com.expedia.bookings.section.SectionLocation
                    android:id="@+id/section_location_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                    <com.expedia.bookings.widget.accessibility.AccessibleEditText
                        android:id="@+id/edit_address_postal_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_postal_code_hint"
                        android:nextFocusForward="@+id/edit_name_on_card"
                        android:maxLines="1" />

                </com.expedia.bookings.section.SectionLocation>
            </LinearLayout>

            <TextView
...
